lfs tracking enabled
Signed-off-by: Trilokesh Rangam <rangam.lokesh@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,3 @@
-## Makefile.am
-
-ACLOCAL_AMFLAGS = -I m4
-
-SUBDIRS = man lib mkfs fsck tools
+version https://git-lfs.github.com/spec/v1
+oid sha256:265765f065bbe145a940e19c98d403a04ee6022afa0a2318941444a278821512
+size 75
